--- a/app/views/films/new.html.erb
+++ b/app/views/films/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New film</h1>
+<h1>New Film</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', filmss_path %>
+<%= link_to 'Back', films_path %>
