--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,37 +1,34 @@
 <div class="navbar">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="brand" href="/">Filmo-spis</a>
-    <!--  <%= link_to "Link 1", "https://www.google.pl/" %>
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="brand" href="/">Spis filmow</a>
+            <!--  <%= link_to "Link 1", "https://www.google.pl/" %>
  -->
-     
-        Moja mała lista filmów   
-     <ul class="nav pull-right">
-     <li>   <%= link_to "Connect With Facebook", "/auth/facebook" %> </li>
-       
-     <li>   <a class="brand" href="/users/sign_up">Rejestracja</a></li>
-    
-     <li>    <div id="login_logout">
-<% unless user_signed_in? %>
-  <li><%= link_to "Sign in","/users/sign_in" %></li>
-<% else %>
-  <li>
-  <%= current_user.email %></li> <%= link_to 'Sign Out', "/logout" %>
-
-<% end %>
-<div id="man_nav">
-  <% if current_man %>
-    Brawo zalogowałeś się jako:<strong><%= current_man.name %></strong>!
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
-  <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
-  <% end %>
-</div>
-
-    
-      </ul> 
-       <%= link_to "google", "https://www.google.pl/" %>
+            <ul class="nav pull-left">
+                        <div id="man_nav">
+                    <% if current_man %>
+                    Signed in as <strong>
+                        <%= current_man.name %></strong>!
+                    <%= link_to "Sign out from Facebook", signout_path, id: "sign_out" %>
+                    <% else %>
+                    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+                    <% end %>
+                </div>
+                <%= link_to "google", "https://www.google.pl/" %>
+            </ul>
+            <ul class="nav pull-right">
+                <li><a class="brand" href="/users/sign_up">Rejestracja</a></li>
+                <li>
+                    <div id="login_logout">
+                        <% unless user_signed_in? %>
+                        <li><a class="brand" href="/users/sign_in">Logowanie</a></li>
+                        <% else %>
+                        <%= current_user.email %>
+                </li>
+                <%= link_to 'Sign Out Movies', "/users/logout" %>
+                <% end %>
+        </div>
+        </ul>
     </div>
-
-  </div>
 </div>
+
