--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,83 @@
  *= require_self
  *= require_tree .
  */
-body { margin-top: 60px; }
+body { 
+	background-color: green;
+	margin-top: 60px; 
+}
+
+#MainContentBox{
+	width: 960px;
+	margin: auto;
+	background-color: white;
+}
+
+.table .table-striped th img{
+width: 120px;
+border: solid 1px red;
+border-radius: 5px;
+
+}
+
+
+
+footer p {
+	-o-animation-name: Zoomout;
+	-moz-animation-name: Zoomout;
+	-webkit-animation-name: Zoomout;
+	animation-name: Zoomout;
+	
+	animation-duration: 13s;
+	-moz-animation-duration: 13s;
+	-webkit-animation-duration: 13s;
+	-o-animation-duration: 13s;
+
+	-o-animation-fill-mode: forwards;
+	-moz-animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+
+	animation-iteration-count:infinite;
+	-moz-animation-iteration-count:infinite; 
+	-webkit-animation-iteration-count:infinite; 
+	-o-animation-iteration-count:infinite; 
+
+	
+}
+
+
+@-moz-keyframes Zoomout 
+{
+	0% {opacity: 1; z-index: 3; -moz-transform:scale(1,1); }
+	99% {opacity: 0; z-index: 3; -moz-transform:scale(3,3); }
+	100% { opacity: 0; z-index: 2;}
+}
+
+
+@-o-keyframes Zoomout 
+{
+	0% {opacity: 1; z-index: 3; -o-transform:scale(1,1); }
+	99% {opacity: 0; z-index: 3; -o-transform:scale(3,3);}
+	100% { opacity: 0; z-index: 2; }
+}
+
+
+@-webkit-keyframes Zoomout 
+{
+	0% {opacity: 1; z-index: 3; -webkit-transform:scale(1,1); }
+	99% {opacity: 0; z-index: 3; -webkit-transform:scale(3,3);}
+	100% { opacity: 0; z-index: 2; }
+}
+	
+
+@keyframes Zoomout 
+{
+	0% {opacity: 1; z-index: 3; transform:scale(1,1); }
+	99% {opacity: 0; z-index: 3; transform:scale(3,3);}
+	100% { opacity: 0; z-index: 2; }
+}
+
+
+
+	
+
